# ir_system

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  api.py  borrar.py  document_parser.py  eval.py  json_to_pickle.ipynb  pdf_parser.py  preprocess.py  pymongo_tfm.py  pyproject.toml  requirements.txt  sentence_transformer.ipynb  text_process.py
data/pickle/: .gitignore
database/: access_db.py  pymongo_tfm.py
dev/: get_data.py  html_parser.py  pdf_parser.py  pymongo_tfm.py
dev/models/: document.py
eval/: eval.py
eval/data/: resultados_bm25.pkl  resultados_cross.pkl  resultados_enhanced_bm25.pkl
front/: main.html
modules/: access_db.py  eval_db.py  html_parser.py  local2mongo.py  local_db.py  mongo_db.py  pymongo.py  pymongo_tfm.py
modules/models/: segmentor.py  text_process.py
modules/utils/: data_handle.py  pickle_loader.py  segmentor.py  text_process.py
notebooks/: json_to_pickle.ipynb  pdf_to_json.ipynb  pdf_to_json.py  preprocess.ipynb  prueba parser.ipynb  prueba_pymongo.ipynb
preprocessing/: html_parser.py  pdf_parser.py
preprocessing/models/: segmentor.py  text_process.py
related_experiments/: Eval_RISQAC.ipynb  Pyserinni_eval.ipynb  RISQAC_creation.ipynb  cross_test.py  similaridad_semantica.ipynb
src/: api.py  document_parser.py
src/data/pickle/: ea.pkl
src/eval/: eval.py
src/modules/: mongo_db.py
src/modules/models/: text_process.py
tfm/preprocessing/: pdf_parser.py
tfm/preprocessing/models/: document.py
